@@ -1,5 +1,11 @@
 # Changes
 
+2016-01-30
+    Mumsys_Session
+    - Add session handling
+    - Adds tests
+    - codecoverage 100%
+
 2016-01-22
     Mumsys_Parser 
     - version 1.1.1
